# kronikas

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  update-citation.yml
src/kronikas/: __init__.py  config.py  data.py  forecast.py  model.py
tests/: conftest.py  test_data.py  test_forecast.py  test_kronikas.py  test_model.py
